tests/error/comptime_arg_errors/generic.err
Error: Unsupported (at $FILE:8:15)
  | 
6 | 
7 | @guppy
8 | def main(q: T @comptime) -> None:
  |                ^^^^^^^^ `T` comptime arguments are not supported

Guppy compilation failed due to 1 previous error
